--- a/style.css
+++ b/style.css
@@ -20,6 +20,20 @@ body {
   background-image: opacity: 50%; */
 }
 
+input[type=text] {
+  width: 50;
+  text-align: center;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  background-color: rgba(153, 250, 218, 0.584);
+  border: 2px solid #00cec9;
+  color: aliceblue;
+  font-family:Bebas+Neue;
+  font-weight: 300;
+  font-size: large;
+}
+
 .homescreen {
   width: 100%;
   height: 100%;
