--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ input[type=text] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  background-color: rgba(153, 250, 218, 0.584);
+  background-color: rgba(153,250,218,0.7);
   border: 2px solid #00cec9;
-  color: aliceblue;
+  color: #5805a0bc;
   font-family:Bebas+Neue;
-  font-weight: 300;
+  font-weight: 500;
   font-size: large;
 }
 
@@ -39,15 +39,15 @@ input[type=text] {
   height: 100%;
   /* background-image: url("images/purple-sparkle-bk.jpg"); */
   border-radius: 15rem;
-  background-color: black;
+  /* background-color: black; */
   color: white;
   transition: transform 2s ;
   cursor: pointer;
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
+  padding-bottom: 0;
+  padding-top: 0;
 } 
 
 .neonText {
@@ -82,9 +82,9 @@ h1 {
 
 .scoreboard > div {
   font-size: 2rem;
-  margin: 0 1rem;
-  padding: 0.5rem;
-  border: 2px solid #660033;
+   margin: 0 1rem;
+  padding: 0.5rem; 
+  border: 2px solid #5805a0bc;
   border-radius: 10px;
   /* color: #660033; */
   color: #5805a0bc;
@@ -171,10 +171,10 @@ h1 {
 .start-button {
   display: block;
   margin: 3rem auto 1rem auto;
-  padding: 1rem 2rem;
+  /* padding: 1rem 2rem; */
   border: none;
   border-radius: 10px;
-  background-color: #dabdf4bc;
+  background-color: #2e0354bc;
   color: #FFFFFF;
   font-size: 1.5rem;
   cursor: pointer;
@@ -186,19 +186,12 @@ h1 {
   background-color: #993366;
 }
 
-.logo {
-	position: absolute;
-	top: 30px;
-	right: 30px;
-	display: block;
-	z-index: 100;
-	transition: all 250ms linear;
+.start-button:hover{
+  background-color: #993366;
 }
 
-.logo img {
-	height: 30px;
-	width: auto;
-	display: block;
+.start-button:active {
+  transform: scale(0.9);
 }
 
 .play-again:active {
@@ -232,10 +225,12 @@ h1 {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
-  background-image: url("images/purple-sparkle-bk.jpg");
+  opacity: 0.4;
+  background-image: url(https://www.shutterstock.com/shutterstock/photos/1633786861/display_1500/stock-vector-colorful-rock-paper-scissors-hand-game-vector-background-pattern-1633786861.jpg);
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: 1490px;
   background-size: cover;
 }
 
